# ASR.lab

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  ruff.toml
.github/: release.yml
.github/workflows/: release.yml
configs/: multi_engine.yaml
src/asr_lab/analysis/: report.py  report_interactive.py  visualizer.py  visualizer_plotly.py
src/asr_lab/analysis/templates/: report_interactive.html  report_interactive.html.bak  report_interactive_backup.html  report_template.html
src/asr_lab/audio/: degradation.py  enhancement.py  loader.py  normalization.py  processor.py  segmentation.py
src/asr_lab/benchmarks/: data_manager.py  runner.py
src/asr_lab/cli/: commands.py
src/asr_lab/config/: benchmark_config.py  engine_registry.py  metric_registry.py
src/asr_lab/core/: models.py
src/asr_lab/engines/: base.py  hubert.py  kaldi.py  moonshine.py  nemo.py  seamless.py  sensevoice.py  usm.py  vosk.py  wav2vec2.py  whisper.py
src/asr_lab/metrics/: base.py  cer.py  mer.py  wer.py  wil.py  wip.py
src/asr_lab/results/: aggregator.py  export.py  manager.py  metrics_compute.py
src/asr_lab/setup/: engine_setup.py  nemo_patch.py  vosk_setup.py
